# pcm-hdm-202603

./: .gitattributes  .gitignore  README.md  pyproject.toml
lectures/: README.md
notebooks/distributed/: 01-02-light_source_spd_comparison.ipynb  01-03-bt709_rgb_to_xyz_via_rp177.ipynb  01-03-cie1931_2deg_standard_observer_plotly.ipynb  02-02-gamma_influencers.ipynb  02-04-convert_helen_and_john.ipynb  06-01-OpenColorIO_and_3D_LUTs.ipynb  08-01-apple_log_2_to_apple_log_rgb_to_rgb_matrix.ipynb  README.md
notebooks/student-work/: README.md
resources/data/: README.md
resources/images/08-03/: Macbeth_Apple_log_2_UHD_res.01566811.tif  Macbeth_Apple_log_2_lower_res.01566811.tif  Macbeth_Apple_log_UHD_res.01565941.tif  Macbeth_Apple_log_lower_res.01565941.tif
resources/images/multiple/: ARRI_Helen_John_ALEXA_35_AWG4_1K.exr
resources/ocio/: fn-nuke_studio-config-v3.0.0_aces-v2.0_ocio-v2.4.ocio  hdm_studio-config-v3.0.0_aces-v2.0_ocio-v2.4.ocio
resources/papers/: README.md
src/pcm/: README.md  __init__.py  chromaticity_plotly.py  debug.py  downsizer.py  image_viewing.py  one_to_one_drawing.py  paths.py  tone_plots.py
src/pcm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
